fix: asteroid list
Fix of asteroid list wasn't show asteroid item

--- a/starter/app/src/main/res/layout/asteroid_item.xml
+++ b/starter/app/src/main/res/layout/asteroid_item.xml
@@ -26,6 +26,7 @@
             app:layout_constraintStart_toStartOf="parent"
             android:layout_marginTop="@dimen/asteroid_name_margin_top"
             android:textSize="@dimen/asteroid_name_text_size"
+            android:layout_marginStart="16dp"
             android:textStyle="bold"
             android:maxLines="1"
             android:text="@{asteroids.codename}"
@@ -35,26 +36,27 @@
         <TextView
             android:id="@+id/tv_asteroid_date"
             style="@style/AsteroidItemTextTitle"
-            android:layout_marginTop="4dp"
-            android:layout_marginBottom="8dp"
-            android:textSize="@dimen/text_size"
+            android:layout_marginTop="8dp"
+            android:layout_marginBottom="14dp"
             android:alpha="0.8"
             android:text="@{asteroids.closeApproachDate}"
+            android:textSize="@dimen/text_size"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintStart_toStartOf="@+id/tv_asteroid_name"
             app:layout_constraintTop_toBottomOf="@id/tv_asteroid_name"
             tools:text="@string/asteroid_date" />
 
         <ImageView
             android:id="@+id/iv_asteroid_hazard"
             android:layout_width="wrap_content"
-            android:visibility="visible"
-            android:contentDescription="@string/asteroid_icon_description"
             android:layout_height="wrap_content"
-            app:layout_constraintBottom_toBottomOf="@+id/tv_asteroid_date"
+            android:layout_marginStart="356dp"
+            android:contentDescription="@string/asteroid_icon_description"
+            android:visibility="visible"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="@+id/tv_asteroid_name"
-            android:layout_marginEnd="@dimen/asteroid_item_margin_end"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
             app:statusIcon="@{asteroids.potentiallyHazardous}"
             tools:srcCompat="@drawable/ic_status_potentially_hazardous" />
 
